Created prepare_data function in main.py

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "[256237 rows x 10 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "[223407 rows x 10 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -703,14 +703,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97891    2017-01-01 17:00:00\n",
+       "97892    2017-01-01 18:00:00\n",
+       "97893    2017-01-01 18:00:00\n",
+       "97894    2017-01-01 19:00:00\n",
+       "97895    2017-01-01 19:00:00\n",
+       "                 ...        \n",
+       "355769   2023-09-30 08:00:00\n",
+       "355770   2023-09-30 17:00:00\n",
+       "355771   2023-09-30 22:00:00\n",
+       "355772   2023-09-30 22:00:00\n",
+       "355774   2023-09-30 20:00:00\n",
+       "Name: cleaned_date, Length: 223407, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temp =  df.OCC_DATE.astype(str) + ' ' + df.OCC_HOUR.astype(str) + ':00'\n",
     "temp = pd.to_datetime(temp)\n",
     "\n",
     "df['cleaned_date'] = temp\n",
+    "df.cleaned_date\n",
     "\n",
     "# datetimeRange = pd.date_range(start=df.OCC_DATE.min(),end=df.OCC_DATE.max(), freq = 'H').to_frame(False, 'date')\n",
     "# processed_data = datetimeRange.set_index('date').join(df.set_index('cleaned_date'))\n",
@@ -2025,13 +2048,6 @@
     "ax.plot()\n",
     "y_test[y_test>= 1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
